weikakou_project/cmake-build-debug/CMakeFiles/clion-log.txt
/home/boon/boon_liupeng/clion-2017.2.2/bin/cmake/bin/cmake -DCMAKE_BUILD_TYPE=Debug -G "CodeBlocks - Unix Makefiles" /home/boon/boon_liupeng/weikakou_project
CMake Warning (dev) at CMakeLists.txt:45 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_BINARY_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/cmake-build-debug'

  but the new evaluation rules produce:

    '@PROJECT_BINARY_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at CMakeLists.txt:46 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_SOURCE_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project'

  but the new evaluation rules produce:

    '@PROJECT_SOURCE_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at kfs/CMakeLists.txt:45 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_BINARY_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/cmake-build-debug/kfs'

  but the new evaluation rules produce:

    '@PROJECT_BINARY_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at kfs/CMakeLists.txt:46 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_SOURCE_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/kfs'

  but the new evaluation rules produce:

    '@PROJECT_SOURCE_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at kfs/CMakeLists.txt:55 (add_subdirectory):
  The source directory

    /home/boon/boon_liupeng/weikakou_project/kfs/algorithm

  does not contain a CMakeLists.txt file.

  CMake does not support this case but it used to work accidentally and is
  being allowed for compatibility.

  Policy CMP0014 is not set: Input directories must have CMakeLists.txt.  Run
  "cmake --help-policy CMP0014" for policy details.  Use the cmake_policy
  command to set the policy and suppress this warning.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at mywkk/CMakeLists.txt:13 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_SOURCE_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/mywkk'

  but the new evaluation rules produce:

    '@PROJECT_SOURCE_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at mywkk/CMakeLists.txt:14 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_BINARY_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/cmake-build-debug/mywkk'

  but the new evaluation rules produce:

    '@PROJECT_BINARY_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

CMake Warning (dev) at mywkk/CMakeLists.txt:15 (set):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '@PROJECT_BINARY_DIR@'

  the old evaluation rules produce:

    '/home/boon/boon_liupeng/weikakou_project/cmake-build-debug/mywkk'

  but the new evaluation rules produce:

    '@PROJECT_BINARY_DIR@'

  Using the old result for compatibility since the policy is not set.
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Configuring done
-- Generating done
-- Build files have been written to: /home/boon/boon_liupeng/weikakou_project/cmake-build-debug

Cannot get compiler information:
	Compiler exited with error code 1: /usr/bin/c++ -xc++ -I/home/boon/boon_liupeng/weikakou_project/kfs/algorithm -I/home/boon/boon_liupeng/weikakou_project/kfs/mytest -O3 -fopenmp -mfpmath=sse -msse4.2 -march=x86-64 -D HAVE_CBLAS -D HAVE_GSL -D HAVE_SSE2 -O3 -fopenmp -mfpmath=sse -msse4.2 -march=i386 -D HAVE_CBLAS -D HAVE_GSL -D HAVE_SSE2 -g -fpch-preprocess -v -dD -E
	Using built-in specs.
	COLLECT_GCC=/usr/bin/c++
	Target: x86_64-linux-gnu
	Configured with: ../src/configure -v --with-pkgversion='Ubuntu 4.8.4-2ubuntu1~14.04.3' --with-bugurl=file:///usr/share/doc/gcc-4.8/README.Bugs --enable-languages=c,c++,java,go,d,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-4.8 --enable-shared --enable-linker-build-id --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/4.8 --libdir=/usr/lib --enable-nls --with-sysroot=/ --enable-clocale=gnu --enable-libstdcxx-debug --enable-libstdcxx-time=yes --enable-gnu-unique-object --disable-libmudflap --enable-plugin --with-system-zlib --disable-browser-plugin --enable-java-awt=gtk --enable-gtk-cairo --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-4.8-amd64/jre --enable-java-home --with-jvm-root-dir=/usr/lib/jvm/java-1.5.0-gcj-4.8-amd64 --with-jvm-jar-dir=/usr/lib/jvm-exports/java-1.5.0-gcj-4.8-amd64 --with-arch-directory=amd64 --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --enable-objc-gc --enable-multiarch --disable-werror --with-arch-32=i686 --with-abi=m64 --with-multilib-list=m32,m64,mx32 --with-tune=generic --enable-checking=release --build=x86_64-linux-gnu --host=x86_64-linux-gnu --target=x86_64-linux-gnu
	Thread model: posix
	gcc version 4.8.4 (Ubuntu 4.8.4-2ubuntu1~14.04.3) 
	COLLECT_GCC_OPTIONS='-I' '/home/boon/boon_liupeng/weikakou_project/kfs/algorithm' '-I' '/home/boon/boon_liupeng/weikakou_project/kfs/mytest' '-O3' '-mfpmath=sse' '-march=x86-64' '-D' 'HAVE_CBLAS' '-D' 'HAVE_GSL' '-D' 'HAVE_SSE2' '-O3' '-fopenmp' '-mfpmath=sse' '-msse4.2' '-march=i386' '-D' 'HAVE_CBLAS' '-D' 'HAVE_GSL' '-D' 'HAVE_SSE2' '-g' '-fpch-preprocess' '-v' '-dD' '-E' '-D' '___CIDR_DEFINITIONS_END' '-shared-libgcc' '-pthread'
	 /usr/lib/gcc/x86_64-linux-gnu/4.8/cc1plus -E -quiet -v -I /home/boon/boon_liupeng/weikakou_project/kfs/algorithm -I /home/boon/boon_liupeng/weikakou_project/kfs/mytest -imultiarch x86_64-linux-gnu -D_GNU_SOURCE -D_REENTRANT -D HAVE_CBLAS -D HAVE_GSL -D HAVE_SSE2 -D HAVE_CBLAS -D HAVE_GSL -D HAVE_SSE2 -D ___CIDR_DEFINITIONS_END /tmp/compiler-file -mfpmath=sse -march=x86-64 -mfpmath=sse -msse4.2 -march=i386 -fopenmp -fpch-preprocess -g -fworking-directory -O3 -O3 -fstack-protector -Wformat -Wformat-security -dD
	ignoring duplicate directory "/usr/include/x86_64-linux-gnu/c++/4.8"
	ignoring nonexistent directory "/usr/local/include/x86_64-linux-gnu"
	ignoring nonexistent directory "/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../x86_64-linux-gnu/include"
	#include "..." search starts here:
	#include <...> search starts here:
	 /home/boon/boon_liupeng/weikakou_project/kfs/algorithm
	 /home/boon/boon_liupeng/weikakou_project/kfs/mytest
	 /usr/include/c++/4.8
	 /usr/include/x86_64-linux-gnu/c++/4.8
	 /usr/include/c++/4.8/backward
	 /usr/lib/gcc/x86_64-linux-gnu/4.8/include
	 /usr/local/include
	 /usr/lib/gcc/x86_64-linux-gnu/4.8/include-fixed
	 /usr/include/x86_64-linux-gnu
	 /usr/include
	End of search list.
	/tmp/compiler-file:1:0: error: CPU you selected does not support x86-64 instruction set
	 #define ___CIDR_FEATURES_START
	 ^
	/tmp/compiler-file:1:0: error: CPU you selected does not support x86-64 instruction set
	
	
